# talk_to_data

./: docker-compose.yml
backend/: Dockerfile  QueryOutput.py  State.py  analyze_data.py  config.py  execute_query.py  generate_answer.py  generate_chart.py  hello.txt  llm.py  main.py  minio_config.py  pandas_agent.py  pyproject.toml
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: app.d.ts
frontend/src/lib/components/: Analysis.svelte  ChatHistory.svelte  FileList.svelte  FileUpload.svelte  QueryInput.svelte  QueryResults.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/analysis/: +page.svelte
frontend/src/routes/chat/[id]/: +page.svelte
